added language switch button + gradle uplifted